# PoweredByGT710

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  gurt.cpp  pipeline.tldr
Core/: Camera.cpp  Camera.h  Scene.h  Timer.cpp  Timer.h
Graphics/: Light.h  Material.h  Mesh.h  Plane.h  Texture.cpp  Texture.h  Transform.h  Triangle.h  Vertex.h
IO/: OBJLoader.cpp  OBJLoader.h
Math/: Color.h  Matrix4.cpp  Matrix4.h  Vector2.h  Vector3.h  Vector4.h
Renderer/: Renderer.cpp  Renderer.h  Stats.h
